GNOME Bugzilla – Bug 757264
videotestsrc: Bayer format 'gbrg' not handled properly
Last modified: 2015-10-30 20:50:04 UTC
Created attachment 314339 [details] [review] Fix handling of Bayer format 'gbrg' Due to a typo, the `videotestsrc` element does not handle the Bayer format 'gbrg' properly (reports is as invalid), causing negotiation errors. The attached patch fixes it.
Thanks for the patch! commit a95a900c21f66c69fb9e41dc243b554314d79a6d Author: Joan Pau Beltran <joanpau.beltran@socib.cat> Date: Wed Oct 28 18:36:41 2015 +0100 videotestsrc: fix handling of Bayer format 'gbrg' Due to a typo, videotestsrc did not handle the Bayer format 'gbrg' properly and reported it as invalid, causing negotiation errors. https://bugzilla.gnome.org/show_bug.cgi?id=757264